Fixed layout issue and changes navbar background add glass effect in dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -110,4 +110,27 @@
   .link {
     @apply cursor-pointer hover:underline hover:underline-offset-2;
   }
+
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 3px;
+    height: 3px;
+    border-radius: 2px;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background: #09090a;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background: #333;
+    border-radius: 50px;
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+
+  .common-container {
+    @apply  custom-scrollbar
+  }
 }
